--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/home"
@@ -9,6 +9,10 @@
     <item android:id="@+id/booking"
         android:title="@string/booking"
         android:icon="@drawable/ic_booking"
+        />
+    <item android:id="@+id/notification"
+        android:title="@string/notification"
+        android:icon="@drawable/ic_notifications"
         />
     <item android:id="@+id/profile"
         android:title="@string/profile"
