--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,11 @@
     <color name="DarkTheme_text_color">#ffffff</color>
 
     <color name="color_splashScreenBackground">#EFEFEF</color>
-    <color name="color_splashScreenIconBackground">#0076B1</color>
+    <color name="color_splashScreenIconBackground">#2E2E2E</color>
+
+    <color name="ic_launcher_background">#000000</color>
+    
+    <color name="color_danger">#bb2124</color>
+
 
 </resources>
